2004-12-03  Mike Kestner  <mkestner@novell.com>

	* gtk/Dialog.custom : correct return value for AddButton overload.
	[Fixes #70121]

2004-12-03  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : mark accel_group null_ok on ImageMenuItem ctor.
	[Fixes #69041]

2004-12-03  Dan Winship  <danw@novell.com>

	* gtk/Gtk.metadata: Pass TextIters by ref almost everywhere.
	[Fixes #70187]. Kill two varargs warnings.

	* gtk/TextBuffer.custom: Update for that, and also implement
	InsertWithTagsByName

	* sample/GtkDemo/DemoHyperText.cs:
	* sample/GtkDemo/DemoTextView.cs: Remove kludges for broken
	TextIter handling. Also fix the i18n demo bits by translating the
	octal-encoded UTF-8 to hex-encoded UTF-16.

2004-12-03  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : hide junk methods in Global. [Fixes #60895]

2004-12-03  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : hide Visibility enum. [Fixes #60704]

2004-12-01  Todd Berman  <tberman@off.net>

	* generator/StructGen.cs: Check to see if a GType is going to be
	generated. If not, generate a GType.Pointer. This fixes bug
	#70017.
	* glib/TypeConverter.cs: Remove the .IsValueType check, as those
	now have GType properties.
	* gda/Gda.metadata: Change GdaValue.GType to GdaValue.GdaType.
	* doc/en/Gda/Value.xml: Regenerated to reflect new API.

2004-11-30  Dan Winship  <danw@novell.com>

	* sample/GtkDemo/DemoImages.cs: Fix some crashers discovered while
	trying to use this as a test case to figure out whether or not I'd
	broken Gtk#. Sigh. :)

2004-11-30  Mike Kestner  <mkestner@novell.com>

	* glib/glue/value.c : add back some code lost in the merge of
	2-4-branch. [Fixes #70045]

2004-11-26  Jeroen Zwartepoorte  <jeroen@xs4all.nl>

	* gtk/ActionEntry.cs:
	* gtk/ActionGroup.custom:
	* gtk/Gtk.metadata:
	* gtk/Makefile.am:
	* gtk/RadioActionEntry.cs:
	* gtk/ToggleActionEntry.cs:
	* gtk/UIManager.custom:
	* sample/Actions.cs: Updated to use the new *ActionEntry code. Reflects