@@ -1,3 +1,9 @@
+2004-12-03  Jorge Garcia <jgarcia@ac.upc.es>
+
+	* glib/Type.cs:          add Int64 and UInt64 support.
+	* glib/TypeConverter.cs: add Int64 and UInt64 support.
+	* glib/Value.cs:         add Int64 and UInt64 support.
+
 2004-12-03  Mike Kestner  <mkestner@novell.com>
 
 	* gtk/Dialog.custom : correct return value for AddButton overload.
